--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -10,23 +10,32 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+          ref: ${{ github.head_ref }}
+          fetch-tags: false
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install black isort
+
       - name: Get changed *py files
         id: changed-files
         run: |
           FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD -- '*.py')
           echo "changed_files=$FILES" >> $GITHUB_OUTPUT
+
       - name: Run black
         if: steps.changed-files.output.changed_files != ''
         run: |
           echo "${{ steps.changed-files.output.changed_files }}" | xargs black --check
+
       - name: Run isort
         if: steps.changed-files.output.changed_files != ''
         run: |
