--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -33,13 +33,11 @@ jobs:
           echo "changed_files=$FILES" >> $GITHUB_OUTPUT
 
       - name: Run black
-        if: steps.changed-files.outputs.changed_files != ''
+        if: steps.changed-files.outputs.changed_files != '' && success() || failure()
         run: |
           echo "${{ steps.changed-files.outputs.changed_files }}" | xargs black --check
-        continue-on-error: true
 
       - name: Run isort
-        if: steps.changed-files.outputs.changed_files != ''
+        if: steps.changed-files.outputs.changed_files != '' && success() || failure()
         run: |
           echo "${{ steps.changed-files.outputs.changed_files }}" | xargs isort --check
-        continue-on-error: true
